//说明是proto3语法
syntax = "proto3";

option go_package = ".;service";

/*
这段代码的作用是定义了一个简单的gRPC服务，该服务可以接收一个名字参数，并返回一个问候消息。
-  sayHello  是服务的名称。
-  SayHello  是服务中的一个方法，它接收一个  HelloRequest  类型的参数，并返回一个  HelloReply  类型的响应。
-  HelloRequest  是请求消息的定义，它包含一个  name  字段，表示用户的名字。
-  HelloReply  是响应消息的定义，它包含一个  message  字段，表示问候消息。
 */

// The greeting service definition.
service sayHello {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// message 关键字 类似结构体
// The request message containing the user's name.
message HelloRequest {
  //不是赋值 而是定义变量在这个message中的位置 数字自能往下累加
  string name = 1;
  int64  age = 2;
  repeated int32 weight = 3;
}

// The response message containing the greetings
message HelloResponse {
  string responseMsg = 1;
}